[package]
name = "pomoru"
version = "0.1.0"
edition = "2021"
description = "A minimal TUI Pomodoro timer with visual schedule blocks"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
toml = "0.8"
